# aoc-2023-cursed

./: .gitignore  .pre-commit-config.yaml  1-1.py  1-2.py  2-1.py  2-2.py  3-1.py  3-2.py  4-1.py  4-2.py  5.py  6-1.py  pyproject.toml
res/: README.md
ugly7javasolution/: CardDeck.java  IAmAnIdiot.java
